# UHC_ML_Diseases

./: .gitignore  LICENSE  pyproject.toml
data/: Index  WARNING  ask-detrano  bak  cleve.mod  heart-disease.names  new.data
data/costs/: Index  heart-disease.README  heart-disease.cost  heart-disease.delay  heart-disease.expense  heart-disease.group
data/processed/: processed.hungarian.data  processed.switzerland.data  processed.va.data  reprocessed.hungarian.data
data/raw/: cleveland.data  hungarian.data  long-beach-va.data  switzerland.data
notebooks/: Entrega_2.ipynb  importations.ipynb
