[project]
name = "mi-proyecto"
version = "0.1.0"
description = "Add your description here"
package=false
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
